bk_ida/gccida/g0/node_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/node_data/src/graph.c:615:24: error: use of undeclared identifier 'unk_779750'
name = ( const char *)&unk_779750; 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/node_data/src/graph.c:618:14: error: use of undeclared identifier 'off_7798B6'
fprintf( fp, off_7798B6, name); 
             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/node_data/src/obj/graph.o] Error 1
